# hyq2max_description

./: CMakeLists.txt  README.md  package.xml
config/: hyq2max.yaml
gazebo/: gazebo.urdf.xacro
launch/: spawn_hyq2max.launch.py
robots/: hyq2max.urdf.xacro
urdfs/: common.xacro
urdfs/leg/: leg.urdf.xacro
urdfs/trunk/: trunk.urdf.xacro
